<package>
  <name>xvision2</name>
  <version>1.1.0</version>
  <description>
    XVision2
  </description>
  <author>Darius Burschka</author>
  <author>Gregory D. Hager</author>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>
</package>

